--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
   </head>
   <body>
     <div class="page">
-      <header class="page_header">
+      <header class="page header">
         <h1>This is a Heading</h1>
         <p>This is a paragraph.</p>
       </header>
-      <main class="page_content">
+      <main class="page content">
         <section class="recipes"></section>
         <section class="menu"></section>
         <section class="reservation"></section>
         <section class="about"></section>
       </main>
-      <footer class="page_footer"></footer>
+      <footer class="page footer"></footer>
     </div>
   </body>
 </html>
