--- a/index.html
+++ b/index.html
@@ -23,11 +23,83 @@
   <body>
     <div class="page">
       <header class="page header">
-        <h1>This is a Heading</h1>
-        <p>This is a paragraph.</p>
+        <nav class="nav">
+          <img
+            src="./images/logo_coffee_shop.svg"
+            alt="Coffee_Shop_Logo"
+            class="logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#">Menu</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Recipes</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Book a table</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span> <br />
+          in the Practicum Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative.
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Illustration inside the coffee shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div class="header__hours">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Practicum
+          </p>
+        </div>
       </header>
       <main class="page content">
-        <section class="recipes"></section>
+        <section class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <div class="recipes__videos">
+            <div>
+              <iframe
+                class="recipes__iframe"
+                id="aeropress"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span><span>~5 min</span>
+              </p>
+            </div>
+            <div>
+              <iframe
+                class="recipes__iframe"
+                id="frenchpress"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                allowfullscreen
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span><span>~15 min</span>
+              </p>
+            </div>
+          </div>
+        </section>
         <section class="menu"></section>
         <section class="reservation"></section>
         <section class="about"></section>
