Id links updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="page">
-      <header class="page header">
+      <header class="header">
         <nav class="nav">
           <img
             src="./images/logo_coffee_shop.svg"
@@ -31,16 +31,16 @@
           />
           <ul class="nav__links">
             <li>
-              <a class="nav__link" href="#">Menu</a>
+              <a class="nav__link" href="#menu">Menu</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Recipes</a>
+              <a class="nav__link" href="#recipes">Recipes</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Book a table</a>
+              <a class="nav__link" href="#reservation">Book a table</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contacts</a>
+              <a class="nav__link" href="#about">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -68,8 +68,8 @@
           </p>
         </div>
       </header>
-      <main class="page content">
-        <section class="recipes">
+      <main class="content">
+        <section class="recipes" id="recipes">
           <h2 class="recipes__title">Recipes</h2>
           <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
@@ -104,7 +104,7 @@
         <section class="reservation"></section>
         <section class="about"></section>
       </main>
-      <footer class="page footer"></footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
