--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             </div>
           </div>
         </section>
-        <section class="menu"></section>
-        <section class="reservation"></section>
-        <section class="about"></section>
+        <section class="menu" id="menu"></section>
+        <section class="reservation" id="reservation"></section>
+        <section class="about" id="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
