--- a/index.html
+++ b/index.html
@@ -101,7 +101,53 @@
           </div>
         </section>
         <section class="menu" id="menu"></section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="username" class="form__label">Name</label>
+              <input
+                id="username"
+                class="form__input"
+                type="text"
+                name="username"
+                placeholder="Name Surname"
+              />
+              <label for="number" class="form__label">Number of guests</label>
+              <input
+                id="number"
+                class="form__input"
+                type="number"
+                name="number"
+                placeholder="1-8"
+              />
+              <label for="date" class="form__label">Date & time</label>
+              <input
+                id="date"
+                class="form__input"
+                type="datetime-local"
+                name="date"
+              />
+              <label for="email" class="form__label">Your email</label>
+              <input
+                id="email"
+                class="form__input"
+                type="email"
+                name="email"
+                placeholder="email@email.com"
+              />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <button type="submit" class="form__button">Book a table</button>
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <label class="form__label form__label_checkbox_checked">
+                <input type="checkbox" class="form__checkbox" required /> I
+                agree with the terms of use
+              </label>
+            </fieldset>
+          </form>
+        </section>
         <section class="about" id="about"></section>
       </main>
       <footer class="footer"></footer>
