--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="coffee, cafe. espresso, cappuccino, latte" />
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="pages/index.css" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
