--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
       name="description"
       content="Welcome to our Coffee Shop. We searve the best coffee in town!"
     />
+    <meta name="title" property="og:title" content="Coffeeshop" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://imgur.com/a/dr5zbEW"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Welcome to our Coffee Shop. We searve the best coffee in town!"
+    />
+
     <meta name="author" content="John Rojas" />
     <meta name="keywords" content="coffee, cafe. espresso, cappuccino, latte" />
     <title>Coffee Shop</title>
