--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://imgur.com/a/dr5zbEW"
+      content="https://imgur.com/a/virtual-pokedex-dr5zbEW?third_party=1"
     />
     <meta
       name="description"
