updated LinkedIn meta tag 2

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
       name="description"
       content="Welcome to our Coffee Shop. We searve the best coffee in town!"
     />
-    <meta name="title" property="og:title" content="Coffeeshop" />
+    <meta name="title" property="og:title" content="My Coffeeshop" />
     <meta property="og:type" content="Website" />
     <meta
       name="image"
       property="og:image"
-      content="https://imgur.com/a/virtual-pokedex-dr5zbEW?third_party=1"
+      content="https://imgur.com/l1dbHqr"
     />
     <meta
       name="description"
