updated Linkedin meta tag4

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://imgur.com/l1dbHqr"
+      content="https://i.imgur.com/N9fNg1W.png"
     />
     <meta
       name="description"
